working on mobile nav fix

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -12,7 +12,7 @@ body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
 }
 
-blockquote, q {
+q {
 	quotes: "" "";
 
 	&:before,
