--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -180,3 +180,17 @@ ul.box li {
 		border-right: none;
 	}
 }
+
+ story {
+  max-width: 550px;
+  font-family: Georgia, serif;
+  font-size: 16px;
+  font-style: italic;
+  margin: 0.25em 50px;
+  padding: 0.25em 40px;
+  line-height: 1.45;
+  position: relative;
+  color: #FFF;
+  border-left:5px solid #FF7F00;
+  background:#4b8baf;
+}
