--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -7,7 +7,7 @@ dfn, cite, em, i {
 }
 
 blockquote {
-	margin: 0 1.5em;
+	//margin: 0 1.5em;
 }
 
 address {
