--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Topher McCulloch
 Author URI: http://tophermcculloch.com
 Description: Description
-Version: 1.1.1
+Version: 1.1.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: intelligentsiacup
@@ -254,9 +254,6 @@ p {
 dfn, cite, em, i {
   font-style: italic; }
 
-blockquote {
-  margin: 0 1.5em; }
-
 address {
   margin: 0 0 1.5em; }
 
@@ -337,9 +334,9 @@ body {
   background: #fff;
   /* Fallback for when there is no custom background color defined. */ }
 
-blockquote, q {
+q {
   quotes: "" ""; }
-  blockquote:before, blockquote:after, q:before, q:after {
+  q:before, q:after {
     content: ""; }
 
 hr {
@@ -1209,6 +1206,19 @@ ul.box li {
   .entry-footer span:last-child a {
     border-right: none; }
 
+story {
+  max-width: 550px;
+  font-family: Georgia, serif;
+  font-size: 16px;
+  font-style: italic;
+  margin: 0.25em 50px;
+  padding: 0.25em 40px;
+  line-height: 1.45;
+  position: relative;
+  color: #FFF;
+  border-left: 5px solid #FF7F00;
+  background: #4b8baf; }
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
@@ -1443,7 +1453,10 @@ object {
           background: #1f509a; }
   #navigation li > ul.active,
   #navigation ul li > ul.active {
-    display: block; }
+    display: block;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-height: 60vh; }
   #navigation-inner {
     width: 100%; }
   .menu,
@@ -1473,7 +1486,7 @@ object {
   .menu li a {
     color: #fff;
     display: block;
-    padding: 0.8em 2.5em;
+    padding: 0.2em 2.5em;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     position: relative; }
   span.menu-link a {
